# midna

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: LABELS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: bump-version-on-release.yml
midna/: checker.py  core.py  discovery.py  installer.py  logger.py  package_classifier.py  parser.py  uninstaller.py
tests/: test_midna.py
